Bug 1088858 - Backport ANGLE fixes to make WebGL work on Windows in Firefox 33. r=jmuizelaar, a=sledru